# MoneyLens

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  start.sh
api/: Dockerfile  logging.py  main.py  pyproject.toml  requirements.txt  security.py
api/app/: main.py
api/app/api/: endpoints.py
api/app/core/: config.py
api/app/models/: __init__.py  responses.py  schemas.py
api/app/routers/: export.py  health.py  parse.py
api/app/services/: csv_exporter.py  file_manager.py  ocr_extractor.py  parser_service.py  pdf_processor.py  text_extractor.py  totals.py
api/app/utils/: dates.py  numbers.py
api/banks/: hdfc.py  sbi.py
api/core/: config.py
api/models/: responses.py
api/routers/: parse.py
api/services/: ocr_extractor.py  parser_service.py  text_extractor.py
api/storage/db/: README.md
api/templates/: registry.py
compose/: docker-compose.dev.yml  docker-compose.yml
nginx/: Dockerfile  nginx.conf
ops/: Makefile
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js  vite.config.ts
web/components/: DashboardLayout.tsx
web/src/: App.css  App.jsx  App.tsx  main.tsx  tailwind.css
web/src/components/: DashboardLayout.tsx  FileUpload.css  FileUpload.jsx  ResultsDisplay.css  ResultsDisplay.jsx
web/src/pages/: ResultsPage.tsx  UploadPage.tsx
web/src/services/: api.js  api.ts
web/src/store/: parseSlice.ts
web/src/styles/: format.ts
web/src/utils/: helpers.js
