# api/pyproject.toml
[project]
name = "moneylens-api"
version = "0.1.0"
description = "MoneyLens API for parsing bank statement PDFs (text-first, OCR fallback) and computing cash flows."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "python-multipart==0.0.9",
  "pdfplumber==0.11.4",
  "pdf2image==1.17.0",
  "pytesseract==0.3.13",
  "pandas==2.2.2"
]

[tool.uvicorn]
factory = false
